<resources>
    <string name="app_name">SmartControlCenter</string>
    <string name="title_home">Home</string>
    <string name="title_scene_model">Secen model</string>
    <string name="title_device_status">Device status</string>
    <string name="title_activity_device_list">Device List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_btn">connect</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">\"Contacts permissions are needed for providing phone number completions.\"</string>
    <string name="title_activity_register">Register</string>
    <string name="title_voice">Voice</string>
    <string name="title_personal">Personal</string>
    <string name="scene_name">Scene Name</string>
    <string name="scene_icon">Scene Icon</string>
    <string name="scene_edit">Scene Edit</string>
    <string name="finish">Finish</string>
    <string name="add_device">Add Device</string>
    <string name="add_zone">Add Zone</string>
    <string name="add_scene">Add Scene</string>
    <string name="zone_name">Zone Name</string>
    <string name="device_name">Device Name</string>
    <string name="serial_number">Serial Number</string>
    <string name="serial_number_is_empty">Serial number not empty, please input device serial number</string>
    <string name="scan_qrcode_desc">Please put the product serial number in the camera</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="title_activity_light">LightActivity</string>
    <string name="title_activity_window_control">WindowControlActivity</string>
    <string name="title_activity_curtain_control">CurtainControlActivity</string>
    <string name="push_window">Push Window</string>
    <string name="pull_window">Pull Window</string>


</resources>
