<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/popup_add_scene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/add_scene"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_scene" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:srcCompat="@drawable/divider" />

    <TextView
        android:id="@+id/popup_add_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:contentDescription="@string/add_device"
        android:padding="10dp"
        android:text="@string/add_device" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:srcCompat="@drawable/divider" />

    <TextView
        android:id="@+id/popup_add_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:contentDescription="@string/add_zone"
        android:padding="10dp"
        android:text="@string/add_zone" />
</LinearLayout>