<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.googolfist.smartcontrolcenter.scene.EditSceneActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/scene_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:title="@string/scene_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/scene_name_editor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/scene_name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/title_scene_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scene_toolbar" />

    <TextView
        android:id="@+id/title_scene_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/scene_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/scene_name_editor"
        app:layout_constraintLeft_toLeftOf="parent" />


    <ImageView
        android:id="@+id/scene_editor_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxWidth="36dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon1"
        app:layout_constraintLeft_toLeftOf="@+id/scene_name_editor"
        app:layout_constraintTop_toBottomOf="@+id/scene_name_editor" />

    <TextView
        android:id="@+id/title_scene_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scene_icon"
        app:layout_constraintBottom_toBottomOf="@+id/scene_editor_icon"
        app:layout_constraintRight_toRightOf="@+id/title_scene_name" />

    <TextView
        android:id="@+id/device_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Device List"
        app:layout_constraintRight_toRightOf="@+id/title_scene_name"
        app:layout_constraintTop_toBottomOf="@+id/title_scene_icon" />

    <Button
        android:id="@+id/add_device_to_scene"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="add device"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/scene_device_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/white"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/add_device_to_scene"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_list_title"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
